# mistral-dashboard

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  README.md  README.rst  _50_mistral.py.example  babel-django.cfg  manage.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
mistraldashboard/: api.py  dashboard.py  exceptions.py  forms.py  handle_errors.py  settings.py
mistraldashboard/action_executions/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/action_executions/templates/action_executions/: _update.html  detail.html  filtered.html  index.html  update.html
mistraldashboard/actions/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/actions/templates/actions/: _create.html  _run.html  _update.html  create.html  detail.html  index.html  run.html  update.html
mistraldashboard/cron_triggers/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/cron_triggers/templates/cron_triggers/: _create.html  create.html  detail.html  index.html
mistraldashboard/dashboards/mistral/: api.py  dashboard.py
mistraldashboard/dashboards/mistral/executions/: panel.py  tables.py  urls.py  views.py
mistraldashboard/dashboards/mistral/executions/templates/executions/: _label.html
mistraldashboard/dashboards/mistral/workbooks/: forms.py  panel.py  tables.py  urls.py  views.py
mistraldashboard/default/: SmartCell.py  panel.py  smart_cell.py  utils.py
mistraldashboard/default/templates/default/: _booleanfield.html  _code.html  _humantime.html  _label.html  _preprint.html  _prettyprint.html  base.html  table.html
mistraldashboard/enabled/: _50_mistral.py
mistraldashboard/executions/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/executions/templates/executions/: _code.html  _update_description.html  detail.html  index.html  index_filtered_task.html  update_description.html
mistraldashboard/local/: local_settings.py.example
mistraldashboard/static/mistraldashboard/css/: style.css
mistraldashboard/static/mistraldashboard/scss/: style.scss
mistraldashboard/tasks/: panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/tasks/templates/tasks/: detail.html  execution.html  filtered.html  index.html  result.html
mistraldashboard/test/: helpers.py  settings.py
mistraldashboard/test/test_data/: mistral_data.py  utils.py
mistraldashboard/test/tests/: error_handle.py
mistraldashboard/workbooks/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/workbooks/templates/workbooks/: _create.html  _select_definition.html  _update.html  create.html  detail.html  index.html  select_definition.html  update.html
mistraldashboard/workflows/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
mistraldashboard/workflows/templates/workflows/: _create.html  _execute.html  _select_definition.html  _update.html  create.html  detail.html  execute.html  index.html  select_definition.html  update.html
releasenotes/notes/: bug-1931558-4674cdde721dfab8.yaml  drop-py-2-7-022d0dd59feb8b07.yaml
releasenotes/source/: conf.py  index.rst
tools/: install_venv.py
