[metadata]
name = mistral-dashboard
summary = Mistral dashboard
description_file = README.rst
license = Apache License, Version 2.0
python_requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/mistral/latest/

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    mistraldashboard

[upload_sphinx]
upload_dir = doc/build/html
