[metadata]
name = mistral-dashboard
summary = Mistral dashboard
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/mistral/latest/
license = Apache License, Version 2.0
python_requires = >=3.9
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    mistraldashboard

[upload_sphinx]
upload_dir = doc/build/html
